5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1692_1872.log
== TEST (2019-05-02 13:27:41) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x=o:
	print("Eixo X")
elif y=o:
	print("Eixo Y")
else:
	print("Origem")
-- ERROR:
File "XXXX", line 11
    elif x=o:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:27:48) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==o:
	print("Eixo X")
elif y==o:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:27:53) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==o:
	print("Eixo X")
elif y==o:
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.162419
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:27:55) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==o:
	print("Eixo X")
elif y==o:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:17) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0:
	print("Eixo X")
elif y==0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:47) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:28:50) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.147669
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:28:51) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:29:07) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:29:12) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:29:45) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.172537
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:29:46) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:30:04) 
-- CODE:
x = int(input("digite x: "))
y = int(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:30:05) 
-- CODE:
x = int(input("digite x: "))
y = int(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.162222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1872/main.py", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:30:05) 
-- CODE:
x = int(input("digite x: "))
y = int(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:30:37) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x<0 and y<0:
	print("Q3")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:32:27) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- EXECUTION TIME:
0.216976
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:28) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:31) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:36) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:32:37) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- EXECUTION TIME:
0.202646
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:32:37) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x==y==0:
	print("Origem")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:44) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:33:47) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==y==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.164813
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:33:48) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:34:08) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==0 and ==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.150533
-- ERROR:
  File "/home/codebench/codes/1692/1872/main.py", line 13
    elif x==0 and ==0:
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:09) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==0 and ==0:
	print("Origem")
else:
	print("Q3")
-- ERROR:
File "XXXX", line 13
    elif x==0 and ==0:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:13) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:34:15) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.149606
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:34:17) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:35:25) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif x==0 and y<0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif y==0 and x<0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:35:27) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif x==0 and y<0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif y==0 and x<0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.21494
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:35:29) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif x==0 and y<0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif y==0 and x<0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.21448
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 13:35:29) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo X")
elif x==0 and y<0:
	print("Eixo X")
elif y==0 and x>0:
	print("Eixo Y")
elif y==0 and x<0:
	print("Eixo Y")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 13:37:55) 
-- CODE:
x = float(input("digite x: "))
y = float(input("digite y: "))
if x>0 and y>0:
	print("Q1")
elif x<0 and y>0:
	print("Q2")
elif x>0 and y<0:
	print("Q4")
elif x==0 and y>0:
	print("Eixo Y")
elif x==0 and y<0:
	print("Eixo Y")
elif y==0 and x>0:
	print("Eixo X")
elif y==0 and x<0:
	print("Eixo X")
elif x==0 and y==0:
	print("Origem")
else:
	print("Q3")
-- EXECUTION TIME:
0.152366
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
